tests/snapshots/examples_fixtures/diagnostics_demos__hint_demos__type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/hint_demos/type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/diagnostics_demos/hint_demos/type_mismatch.flx:13:15
   |
13 | let invalid = name + age;
   |               ^^^^^^^^^^
   |               ---------- this expression has type `String and Int`

   |               ---------- operator operands are known at compile time

Note:
  expected type: matching '+' operands (Int+Int, Float+Float, or String+String)
  found type: String and Int

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion
== stdout ==
<not executed>
